# AudioSetClassifier

./: .gitignore  README.md  class_labels_indices.json  data_clean.py  hyper_para.py  main.py  prototype.py  pyproject.toml  requirements.txt  resnet_prototype.py  train_config.py  train_prepare.py  trained_model_evaluate.py
ResNet/: ResNet18.py
docker/: Dockerfile
docker/compute-server/: Dockerfile  docker-compose.yml
docker/cpu/: docker-compose.yml
docker/gpu/: docker-compose.yml
lib/AudioSet/transform/: transforms.py
lib/AutoEncoder/: AudioDecoder.py  AudioEncoder.py  AutoEncoderPrepare.py  __init__.py  utils.py
src/: AudioEncoder.py  AudioSetForResNet18Classifier.py  AutoEncodedAudioSet.py  CameraResponse.py  Classifier.py  ClassifierTester.py  FullSpectroAudioSet.py  LightPropaCamera.py  LightPropagation.py  MonoLabelClassifcationTester.py  MultiLabelClassifierTester.py  OneHotClassifcationTester.py  SoundPowerAudioSet.py  __init__.py  tags.py  util.py
subset_json/: description.txt  sub_eval.json  sub_set_cls_label_idx.json  sub_train.json
subset_json/10_class/: sub_eval.json  sub_train.json
subset_json/music_speech/: description.txt  sub_eval.json  sub_set_cls_label_idx.json  sub_train.json
test/: MakeDummyModel.py  OneHotClassificationTester.py  TestAutoEncodedAudioSet.py  TestClassifierTester.py  TestClassifierTesterMultiLabelTestCase.py  TestFullSpectroAudioSet.py  TestSoundPowerAudioSet.py  TestUtil.py
unit_test/: TestFullSpectroAudioSet.py
